# Baseplane

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
bench/: benchmark_mutex.hh
bench/seq/: bench_dna2.cu  bench_dna2_cpu.cpp
cmake/: BaseplaneConfig.cmake.in
docs/: PERFORMANCE_CONTRACT.md  ROADMAP.md  SEQUENCE_BITS.md  sequence_bits_cuda_profile.md  sequence_simd_backend.md
include/Baseplane/: dna2.hh
include/Baseplane/core/: status.hh
include/Baseplane/seq/: dna2.cuh  dna2_motif.hh  dna2_ops.hh  dna2_scan.cuh  dna2_scan.hh  dna2_views.hh
src/seq/: dna2.cu  dna2_highway.cpp  dna2_scalar.cpp
tests/seq/: dna2_test_helpers.hh  test_dna2.cpp  test_dna2_cuda.cu
